--- a/formulaire.css
+++ b/formulaire.css
@@ -35,6 +35,12 @@ nav a:hover {
     padding: 15px 20px;
 }
 
+p {
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
 .formul {
     margin-left: 350px;
     margin-top: 25px;
